turtleart.lessons.turtleart.Main.Square.scala.error
Source:4: error: identifier expected but integer literal found.
	droite(angle:90)
                     ^Source:10: error: ')' expected but '}' found.
}
^