turtleart.lessons.turtleart.Main.Square.scala.code
override def run() {
	avance(200)
	droite(angle:90)
	avance(200)
	droite(angle:90)
	avance(200)
	droite(angle:90)
	avance(200)
}
